--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
+    "react-border-wrapper": "^1.0.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
