adding react-bootstrap. created modal template for sign up modal. ready for the sign up component to be added to the modal body

--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-border-wrapper": "^1.0.3",
     "react-dom": "^16.12.0",
     "react-event-calendar": "^0.3.0",
