--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.3.16"
+    "mongoose": "^5.3.16",
+    "react-bootstrap": "^1.0.0-beta.16"
   }
 }
