removing modules from the root folder. adding react bootstrap back.

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.8.11",
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-border-wrapper": "^1.0.3",
     "react-dom": "^16.12.0",
     "react-event-calendar": "^0.3.0",
