--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "mongoose-seed": "^0.6.0",
     "react-bootstrap": "^1.0.0-beta.16"
   }
 }
