--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@okta/jwt-verifier": "^1.0.0",
     "@okta/okta-sdk-nodejs": "^3.1.0",
     "axios": "^0.18.0",
     "crypto": "^1.0.1",
