adding initial setup for redis cache and conversations and messages routes

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^5.3.16",
     "mongoose-seed": "^0.6.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "redis": "^3.0.2",
     "square-connect": "^2.20200122.0"
   }
 }
