--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build && node seeds/seeds.js"
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
