--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@okta/okta-sdk-nodejs": "^3.1.0",
     "axios": "^0.18.0",
     "crypto": "^1.0.1",
+    "date-and-time": "^0.12.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
     "mongoose-seed": "^0.6.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-moment": "^0.9.7",
     "square-connect": "^2.20200122.0"
   }
 }
