--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.3.16",
     "mongoose-seed": "^0.6.0",
     "react-bootstrap": "^1.0.0-beta.16",
